--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "pm2": "pm2 start ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -15,7 +16,8 @@
     "jade": "~1.11.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.18",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "pm2": "^3.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
